--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.45",
     "axios": "^0.21.0",
+    "html-react-parser": "^0.14.1",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^6.0.0-beta.0",
-    "react-use": "^15.3.3"
+    "react-use": "^15.3.3",
+    "react-xml-parser": "^1.1.8"
   },
   "devDependencies": {
     "@backstage/cli": "^0.2.0",
