--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-dom": "^16.13.1",
     "react-router": "^6.0.0-beta.0",
     "react-use": "^15.3.3",
-    "react-xml-parser": "^1.1.8"
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@backstage/cli": "^0.2.0",
