--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@roadiehq/backstage-plugin-jira",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
@@ -20,7 +20,7 @@
     "clean": "backstage-cli clean"
   },
   "dependencies": {
-    "@backstage/catalog-model": "^0.2.0",
+    "@backstage/catalog-model": "^0.3.0",
     "@backstage/core": "^0.3.0",
     "@backstage/theme": "^0.2.1",
     "@material-ui/core": "^4.11.0",
@@ -35,7 +35,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.2.0",
+    "@backstage/cli": "^0.3.1",
     "@backstage/dev-utils": "^0.1.3",
     "@backstage/test-utils": "^0.1.2",
     "@testing-library/jest-dom": "^5.10.1",
@@ -48,5 +48,21 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "configSchema": {
+    "$schema": "https://backstage.io/schema/config-v1",
+    "title": "@roadiehq/backstage-plugin-jira",
+    "type": "object",
+    "properties": {
+      "jira": {
+        "type": "object",
+        "properties": {
+          "apiVersion": {
+            "type": "number",
+            "visibility": "frontend"
+          }
+        }
+      }
+    }
+  }
 }
