--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "build": "backstage-cli plugin:build",
+    "build-rollup": "rollup -c",
     "start": "backstage-cli plugin:serve",
     "lint": "backstage-cli lint",
     "test": "backstage-cli test",
@@ -38,13 +39,19 @@
     "@backstage/cli": "^0.4.0",
     "@backstage/dev-utils": "^0.1.3",
     "@backstage/test-utils": "^0.1.2",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.4.1",
     "@testing-library/user-event": "^12.0.7",
     "@types/jest": "^26.0.7",
     "@types/node": "^12.0.0",
     "cross-fetch": "^3.0.6",
-    "msw": "^0.21.2"
+    "msw": "^0.21.2",
+    "rollup": "^2.33.1",
+    "rollup-plugin-dts": "^1.4.13",
+    "rollup-plugin-esbuild": "^2.4.2",
+    "rollup-plugin-peer-deps-external": "^2.2.3"
   },
   "files": [
     "dist"
