--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
+  "homepage": "https://roadie.io/backstage/plugins/jira/",
+  "bugs": {
+    "url": "https://github.com/RoadieHQ/backstage-plugin-jira/issues",
+    "email": "support@roadie.io"
+  },
+  "repository": "github:RoadieHQ/backstage-plugin-jira",
   "publishConfig": {
     "access": "public",
     "main": "dist/index.esm.js",
