--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.4.1",
     "cross-fetch": "^3.0.6",
-    "msw": "^0.21.2",
+    "msw": "^0.21.2"
   },
   "files": [
     "dist"
