--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-use": "^15.3.6",
+    "sanitize-html": "^2.3.2",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@backstage/test-utils": "^0.1.2",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.4.1",
+    "@types/sanitize-html": "^1.27.1",
     "cross-fetch": "^3.0.6",
     "msw": "^0.21.2"
   },
