--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^16.13.1",
     "react-use": "^15.3.6",
     "sanitize-html": "^2.3.2",
+    "uuid": "8.3.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.4.1",
     "@types/sanitize-html": "^1.27.1",
+    "@types/uuid": "^8.3.0",
     "cross-fetch": "^3.0.6",
     "msw": "^0.21.2"
   },
