--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@roadiehq/backstage-plugin-jira",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
@@ -26,10 +26,12 @@
     "clean": "backstage-cli clean"
   },
   "dependencies": {
-    "@backstage/catalog-model": "^0.8.0",
-    "@backstage/core": "^0.7.11",
-    "@backstage/plugin-catalog-react": "^0.2.0",
-    "@backstage/theme": "^0.2.7",
+    "@backstage/catalog-model": "^0.9.0",
+    "@backstage/core-components": "^0.1.5",
+    "@backstage/core-plugin-api": "^0.1.3",
+    "@backstage/core-app-api": "^0.1.4",
+    "@backstage/plugin-catalog-react": "^0.3.0",
+    "@backstage/theme": "^0.2.8",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.45",
@@ -46,9 +48,10 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.6.12",
-    "@backstage/dev-utils": "^0.1.15",
-    "@backstage/test-utils": "^0.1.12",
+    "@backstage/cli": "^0.7.4",
+    "@backstage/core-app-api": "^0.1.4",
+    "@backstage/dev-utils": "^0.2.2",
+    "@backstage/test-utils": "^0.1.14",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@types/sanitize-html": "^1.27.1",
